tests/derivation/inputvalidation/wrong-params-order/expected
1/1: Building ValidateInput (ValidateInput.idr)
Error: While processing right hand side of genY_wrong_giv_order. Error during reflection: Given arguments must go in the same order as in the target type

ValidateInput:1
 16 | -- TODO to add if it is needed
 17 | 
 18 | --- Wrong order of parameters ---
 19 | 
 20 | genY_wrong_giv_order : Fuel -> (b, a : Type) -> Gen MaybeEmpty $ Y a b
                                             ^^^^

Error: While processing right hand side of genX_wrong_giv_order_autoimpl. Error during reflection: Given arguments must go in the same order as in the target type

ValidateInput:2
 19 | 
 20 | genY_wrong_giv_order : Fuel -> (b, a : Type) -> Gen MaybeEmpty $ Y a b
 21 | genY_wrong_giv_order = deriveGen
 22 | 
 23 | genX_wrong_giv_order_autoimpl : Fuel -> (Fuel -> (b, a : Type) -> Gen MaybeEmpty $ Y a b) => Gen MaybeEmpty X
                                                               ^^^^

Error: While processing right hand side of genX_wrong_giv_order_autoimpl_rep. Error during reflection: Given arguments must go in the same order as in the target type

ValidateInput:3
 23 | genX_wrong_giv_order_autoimpl : Fuel -> (Fuel -> (b, a : Type) -> Gen MaybeEmpty $ Y a b) => Gen MaybeEmpty X
 24 | genX_wrong_giv_order_autoimpl = deriveGen
 25 | 
 26 | genX_wrong_giv_order_autoimpl_rep :
 27 |   Fuel -> (Fuel -> (b, a : Type) -> Gen MaybeEmpty $ Y a b) => (Fuel -> (a, b : Type) -> Gen MaybeEmpty $ Y a b) => Gen MaybeEmpty X
                                 ^^^^

Error: While processing right hand side of genY_wrong_gened_order. Error during reflection: Generated arguments must go in the same order as in the target type

ValidateInput:4
 26 | genX_wrong_giv_order_autoimpl_rep :
 27 |   Fuel -> (Fuel -> (b, a : Type) -> Gen MaybeEmpty $ Y a b) => (Fuel -> (a, b : Type) -> Gen MaybeEmpty $ Y a b) => Gen MaybeEmpty X
 28 | genX_wrong_giv_order_autoimpl_rep = deriveGen
 29 | 
 30 | genY_wrong_gened_order : Fuel -> Gen MaybeEmpty (b : Type ** a : Type ** Y a b)
                                                                       ^^^^

Error: While processing right hand side of genY_wrong_gened_order'. Error during reflection: Generated arguments must go in the same order as in the target type

ValidateInput:5
 07 | %default total
 08 | 
 09 | data X = MkX
 10 | 
 11 | data Y : Type -> Type -> Type where
               ^^^^

Error: While processing right hand side of genX_wrong_gened_order_autoimpl. Error during reflection: Generated arguments must go in the same order as in the target type

ValidateInput:6
 32 | 
 33 | genY_wrong_gened_order' : Fuel -> Gen MaybeEmpty (b ** a ** Y a b)
 34 | genY_wrong_gened_order' = deriveGen
 35 | 
 36 | genX_wrong_gened_order_autoimpl : Fuel -> (Fuel -> Gen MaybeEmpty (b : Type ** a : Type ** Y a b)) => Gen MaybeEmpty X
                                                                                         ^^^^

Error: While processing right hand side of genX_wrong_gened_order_autoimpl_rep. Error during reflection: Generated arguments must go in the same order as in the target type

ValidateInput:7
 36 | genX_wrong_gened_order_autoimpl : Fuel -> (Fuel -> Gen MaybeEmpty (b : Type ** a : Type ** Y a b)) => Gen MaybeEmpty X
 37 | genX_wrong_gened_order_autoimpl = deriveGen
 38 | 
 39 | genX_wrong_gened_order_autoimpl_rep :
 40 |   Fuel -> (Fuel -> Gen MaybeEmpty (b : Type ** a : Type ** Y a b)) => (Fuel -> Gen MaybeEmpty (a : Type ** b : Type ** Y a b)) => Gen MaybeEmpty X
                                                         ^^^^

